# capstone-project-1

./: LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
capstone_project_1/: __init__.py  dataset.py  features.py  plots.py
capstone_project_1/data_utils/: download.py
capstone_project_1/modeling/: predict.py  train.py
docs/: fhv_profile.html  index.md  mkdocs.yml  reports.md
docs/docs/: index.md
notebooks/: 1.0-iragca-ny-taxi-data-exploration.ipynb
