[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "capstone_project_1"
version = "0.0.1"
description = "The repo for the first capstone project"
authors = [
  { name = "Chris Andrei Irag", email = "chrisandrei.irag@1.ustp.edu.ph" },
  { name = "Karylle Dela Cruz", email = "karylle.dc30@gmail.com" },
  { name = "Usher Raymond Abainza", email = "usher.abainza@gmail.com" },
  { name = "Dane Casiño", email = "dane.casiño@1.ustp.edu.ph" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
requires-python = "~=3.10"

[project.scripts]
download-data = "capstone_project_1.data_utils.download:main"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["capstone_project_1"]
force_sort_within_sections = true
